// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="group isAlignedToTop"
>
  <ToolbarItem>
    item
  </ToolbarItem>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="group isAlignedToMiddle"
>
  <ToolbarItem>
    item
  </ToolbarItem>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="group isAlignedToTop"
>
  <ToolbarItem>
    item 1
  </ToolbarItem>
  <ToolbarItem>
    item 2
  </ToolbarItem>
  <ToolbarItem>
    item 3
  </ToolbarItem>
</div>
`;
